--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,122 @@
 		-->
 		<div class="commit sansserif">
 
+			<h2 class="date">25 September 2018</h2>
+			<h3 class="author">Birdtalon updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Secure console UI (security records) appears bigger by default.</li>
+				<li class="tweak">One-click-antag now respects game-mode's protected jobs.</li>
+			</ul>
+			<h3 class="author">Fox McCloud updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">adds support for 128x128 skin interface pixel size for 4K monitors</li>
+			</ul>
+			<h3 class="author">Purpose updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Space is now visible under corner pieces of the Intact Empty Ship ruin.</li>
+			</ul>
+
+			<h2 class="date">24 September 2018</h2>
+			<h3 class="author">Triiodine, Desolate, updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Things without blood bleeding red when rolled over by a mulebot.</li>
+			</ul>
+
+			<h2 class="date">19 September 2018</h2>
+			<h3 class="author">Birdtalon updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Screwdrivers now open fire alarms instead of wirecutters.</li>
+			</ul>
+
+			<h2 class="date">18 September 2018</h2>
+			<h3 class="author">Birdtalon updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Laser tag ED-209 bots get the correct names upon construction.</li>
+			</ul>
+			<h3 class="author">Ty-Omaha updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="spellcheck">adds a missing italics tag to nano/templates/song.tmpl</li>
+			</ul>
+
+			<h2 class="date">16 September 2018</h2>
+			<h3 class="author">Shazbot updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Adds in the ability to have multiple custom screens.</li>
+				<li class="rscadd">Adds in Lumi's custom faces.</li>
+			</ul>
+			<h3 class="author">dandykong updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Internal manipulation surgeries can now be performed on mouths after the head is augmented.</li>
+			</ul>
+			<h3 class="author">variableundefined updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Contribution.md now properly state that changelog is mandated for all PR.</li>
+			</ul>
+
+			<h2 class="date">14 September 2018</h2>
+			<h3 class="author">Ty-Omaha updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixes logic with obscure proc adjust_bodytemperature</li>
+			</ul>
+
+			<h2 class="date">11 September 2018</h2>
+			<h3 class="author">Aurorablade updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Adds a missing var to cult comms logging.</li>
+			</ul>
+			<h3 class="author">alex-gh updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">It is now possible to heal robotic limbs and IPCs through View Variables</li>
+			</ul>
+			<h3 class="author">variableundefined updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">pAI can no longer use name with special characters that cause their chat messages to disappear.</li>
+			</ul>
+
+			<h2 class="date">09 September 2018</h2>
+			<h3 class="author">AffectedArc07 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">You can no longer gib everyone on the server by forcing admins to call verbs with NTSL</li>
+			</ul>
+			<h3 class="author">Agameofscones updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">removes the equip region for the mask slot on holobadge-cords</li>
+				<li class="tweak">changes implementation of https://github.com/ParadiseSS13/Paradise/pull/9471 to be smarter and more long term.</li>
+			</ul>
+			<h3 class="author">Kyep updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixed bad spawn points in the Wizard Academy away mission.</li>
+				<li class="bugfix">The two welding goggles that went missing from the table in atmos have been returned.</li>
+			</ul>
+			<h3 class="author">SkeletalElite updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">The paper in the holoparasite kit now describes both of the Chaos holoparasite's modes</li>
+			</ul>
+			<h3 class="author">Ty-Omaha updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Nightmare writhing now properly works</li>
+				<li class="bugfix">Fixes the wire under the door in med maint that led to a wall</li>
+				<li class="bugfix">Virology now has a hologram</li>
+			</ul>
+			<h3 class="author">nicetoolbox updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Prevent instant rev victory in rev gamemode</li>
+				<li class="bugfix">Cryo now heals all your mutated limbs</li>
+			</ul>
+			<h3 class="author">uc_guy updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Ghosts can no longer eject IDs from fax machines and ID computers.</li>
+				<li class="bugfix">Fixed exploit that allowed exiled mobs to return to the station</li>
+			</ul>
+			<h3 class="author">variableundefined updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">One-click antag vampire showing up as a changeling on antag HUD.</li>
+				<li class="bugfix">Claw game should give you token for payment by card properly again.</li>
+				<li class="bugfix">Mime forcewall now properly last for 30 seconds instead of 10.</li>
+				<li class="bugfix">The cancel button actually work properly when editing memory now.</li>
+				<li class="tweak">A wallet now shows a green card decal by default if there's a card inside.</li>
+			</ul>
+
 			<h2 class="date">05 September 2018</h2>
 			<h3 class="author">IrkallaEpsilon updated:</h3>
 			<ul class="changes bgimages16">
